<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/search_bottom_sheet"
    app:layout_behavior="@string/bottom_sheet_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/search_filter_toggle_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true">
            <Button
                android:id="@+id/search_filter_button_asc"
                android:text="@string/search_filter_ascending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/search_filter_button_desc"
                android:text="@string/search_filter_descending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>
        <RadioGroup
            android:id="@+id/search_filter_sort_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/search_filter_by_popularity"
                android:text="@string/search_filter_by_popularity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <RadioButton
                android:id="@+id/search_filter_by_rating"
                android:text="@string/search_filter_by_rating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <RadioButton
                android:id="@+id/search_filter_by_title"
                android:text="@string/search_filter_by_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_filter_confirm"
            android:text="@string/search_filter_confirm"/>
    </LinearLayout>
</FrameLayout>
